src/main/java/com/example/petslist/error/PetNotFoundException.java
package com.example.petslist.error;

public class PetNotFoundException extends RuntimeException {
    public PetNotFoundException(Long id) {
        super("Could not find animal " + id);
    }
}
